--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>z
+<!DOCTYPE html>
 
 <html lang="es">
     <head>
@@ -18,6 +18,7 @@
         </header>
         <main>
             <h1>Teoria Tema 6 - Selectors CSS</h1>
+            <h2>Tremedo simbolo voy a poner</h2>
             <section>
                 <div>
                     <h3>Selector Universal (*)</h3>
